--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -13,7 +13,7 @@ jobs:
   pre_commit:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/mandays/automator:v0.0.1
+      image: ghcr.io/mandays/automator:latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GH_TOKEN }}
